--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^3.1.0
+  flutter_login_facebook: ^1.1.0
   provider: ^6.0.0
   package_info: ^2.0.2
   flutter_countdown_timer: ^4.1.0
