--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  path_provider: ^2.0.2
+  sqflite: ^1.3.0
   firebase_auth: ^3.1.0
   flutter_login_facebook: ^1.1.0
   provider: ^6.0.0
