--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  flutter_rating_bar: ^4.0.0
   path_provider: ^2.0.2
   sqflite: ^1.3.0
   firebase_auth: ^3.1.0
