--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  timezone: ^0.8.0
+  rxdart: ^0.27.2
+  flutter_local_notifications: ^8.2.0
   flutter_rating_bar: ^4.0.0
   path_provider: ^2.0.2
   sqflite: ^1.3.0
