--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  connectivity: ^3.0.6
   timezone: ^0.8.0
   rxdart: ^0.27.2
   flutter_local_notifications: ^8.2.0
