--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.herokuapp.dotnow">
+    package="online.dotnow.dot_now">
    <application
         android:label="DotNow"
         android:icon="@mipmap/ic_launcher">
@@ -40,6 +40,8 @@
        <!-- Facebook login -->
        <meta-data android:name="com.facebook.sdk.ApplicationId"
            android:value="@string/facebook_app_id"/>
+       <meta-data android:name="com.facebook.sdk.ClientToken"
+           android:value="@string/facebook_client_token"/>
 
        <activity android:name="com.facebook.FacebookActivity"
            android:configChanges=
